tests/baselines/reference/issue44596.errors.txt
tests/cases/compiler/index.tsx(11,14): error TS7006: Parameter 'value' implicitly has an 'any' type.


==== tests/cases/compiler/index.tsx (1 errors) ====
    interface Elements {
      foo: { callback?: (value: number) => void };
      bar: { callback?: (value: string) => void };
    }
    
    type Props<C extends keyof Elements> = { as?: C } & Elements[C];
    declare function Test<C extends keyof Elements>(props: Props<C>): null;
    
    <Test
      as="bar"
      callback={(value) => {}}
                 ~~~~~
!!! error TS7006: Parameter 'value' implicitly has an 'any' type.
    />;
    
    Test({
      as: "bar",
      callback: (value) => {},
    });
    
    <Test<'bar'>
      as="bar"
      callback={(value) => {}}
    />;
    